--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,14 @@
 Package: EGSEAdata
 Title: Gene set collections for the EGSEA package
-Version: 1.0.0
-Date: 15-02-2016
+Version: 1.0.1
+Date: 12-07-2016
 Author:  Monther Alhamdoosh, Yifang Hu and Gordon K. Smyth 
 Maintainer: Monther Alhamdoosh <m.hamdoosh@gmail.com>
-Description: This package includes gene set collections that are used for the
-    Ensemble of Gene Set Enrichment Analyses (EGSEA) method for gene set testing.
+Description: This package includes gene set collections that are used for the Ensemble of Gene Set Enrichment Analyses (EGSEA) method for gene set testing. It includes Human and Mouse versions of the MSidDB (Subramanian, et al. (2005) PNAS, 102(43):15545-15550) and GeneSetDB (Araki, et al. (2012) FEBS Open Bio, 2:76-82) collections.
 biocViews: ExperimentData
 Depends:
     R (>= 3.3)
-License: GPL-2
+License: file LICENSE
 LazyLoad: yes
 NeedsCompilation: no
 Suggests:
